--- a/XSourceNote/XSourceNotePreferencesWindowController.xib
+++ b/XSourceNote/XSourceNotePreferencesWindowController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9059"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="XBookmarkPreferencesWindowController">
+        <customObject id="-2" userLabel="File's Owner" customClass="XSourceNotePreferencesWindowController">
             <connections>
                 <outlet property="nextShortcutView" destination="JLx-zc-ibN" id="oTK-wu-nNl"/>
                 <outlet property="prevShortcutView" destination="7rN-v6-Ooq" id="tzo-An-hWc"/>
@@ -14,7 +15,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="XBookmark Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" oneShot="NO" showsToolbarButton="NO" frameAutosaveName="" animationBehavior="default" id="sa8-k5-Urz" customClass="NSPanel">
+        <window title="XSourceNote Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" oneShot="NO" showsToolbarButton="NO" frameAutosaveName="" animationBehavior="default" id="sa8-k5-Urz" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" utility="YES" documentModal="YES"/>
             <rect key="contentRect" x="139" y="81" width="321" height="134"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
@@ -26,7 +27,6 @@
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w11-1Y-won">
                         <rect key="frame" x="21" y="97" width="120" height="17"/>
-                        <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Toggle Bookmark :" id="JKd-I7-C9i">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -35,7 +35,6 @@
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YRt-3e-dZM">
                         <rect key="frame" x="21" y="72" width="113" height="17"/>
-                        <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Next Bookmark :" id="GnO-JA-ZhG">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -44,7 +43,6 @@
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EYS-1m-c7a">
                         <rect key="frame" x="21" y="47" width="135" height="17"/>
-                        <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Previous Bookmark :" id="hea-XK-0CF">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -53,7 +51,6 @@
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XGX-xn-pgD">
                         <rect key="frame" x="21" y="22" width="125" height="17"/>
-                        <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Show Bookmarks :" id="2O6-Nx-9cl">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -62,22 +59,17 @@
                     </textField>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3nr-4B-3wP" customClass="MASShortcutView">
                         <rect key="frame" x="165" y="95" width="136" height="19"/>
-                        <animations/>
                     </customView>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JLx-zc-ibN" customClass="MASShortcutView">
                         <rect key="frame" x="165" y="71" width="136" height="19"/>
-                        <animations/>
                     </customView>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7rN-v6-Ooq" customClass="MASShortcutView">
                         <rect key="frame" x="165" y="45" width="136" height="19"/>
-                        <animations/>
                     </customView>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRl-eW-fu8" customClass="MASShortcutView">
                         <rect key="frame" x="165" y="20" width="136" height="19"/>
-                        <animations/>
                     </customView>
                 </subviews>
-                <animations/>
             </view>
             <point key="canvasLocation" x="141.5" y="174"/>
         </window>
