--- a/XSourceNote/XSourceNoteWindowController.xib
+++ b/XSourceNote/XSourceNoteWindowController.xib
@@ -22,20 +22,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="352"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView misplaced="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="37" horizontalPageScroll="10" verticalLineScroll="37" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYV-ro-Pzb">
-                        <rect key="frame" x="0.0" y="37" width="308" height="315"/>
+                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="37" horizontalPageScroll="10" verticalLineScroll="37" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYV-ro-Pzb">
+                        <rect key="frame" x="0.0" y="37" width="401" height="315"/>
                         <clipView key="contentView" id="Srs-g7-vWE">
-                            <rect key="frame" x="0.0" y="0.0" width="308" height="315"/>
+                            <rect key="frame" x="0.0" y="0.0" width="401" height="315"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="35" rowSizeStyle="automatic" viewBased="YES" id="wDo-JK-DHS">
-                                    <rect key="frame" x="0.0" y="0.0" width="308" height="315"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="401" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                     <tableColumns>
-                                        <tableColumn identifier="BookmarkColumn" width="305" minWidth="40" maxWidth="1000" id="eR8-rt-ZIO">
+                                        <tableColumn identifier="BookmarkColumn" width="398" minWidth="40" maxWidth="1000" id="eR8-rt-ZIO">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -49,10 +49,10 @@
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
                                                 <tableCellView id="Ken-Tm-92n" customClass="XSourceNoteTableCellView">
-                                                    <rect key="frame" x="1" y="1" width="305" height="35"/>
+                                                    <rect key="frame" x="1" y="1" width="398" height="35"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="kwl-Wy-SAM">
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kwl-Wy-SAM">
                                                             <rect key="frame" x="1" y="15" width="303" height="17"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="SourceFileName.m:100" id="fBJ-yv-8Yj">
                                                                 <font key="font" metaFont="system"/>
@@ -60,7 +60,7 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                         </textField>
-                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6vt-O6-GiC">
+                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6vt-O6-GiC">
                                                             <rect key="frame" x="3" y="0.0" width="299" height="17"/>
                                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="SourceFileAbsoluteFilePath" placeholderString="" id="xmX-7d-1DK">
                                                                 <font key="font" metaFont="system"/>
@@ -117,8 +117,8 @@
                             <action selector="helpClicked:" target="-2" id="LVb-70-U2a"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9jw-2w-ASz">
-                        <rect key="frame" x="197" y="-2" width="77" height="30"/>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9jw-2w-ASz">
+                        <rect key="frame" x="224" y="3" width="89" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="19" id="5Tp-Qt-ED7"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="DM1-0U-Ggm"/>
@@ -131,8 +131,8 @@
                             <action selector="removeBookmarkClicked:" target="-2" id="mni-1s-lhI"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="neg-vI-q3e">
-                        <rect key="frame" x="219" y="-2" width="82" height="30"/>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="neg-vI-q3e">
+                        <rect key="frame" x="309" y="3" width="91" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="19" id="RF1-I0-HcN"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="W6a-t5-JBz"/>
